--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@ Project-insight
     <p>
       First publication to Github
     </p>
+    <p>If you're reading this, Github is easy to hack, just be sure to never commit more than what you're sure you can commit every day</p>
+    
   </div>
 </body>
