--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ Project-insight
       First publication to Github
     </p>
     <p>If you're reading this, Github is easy to hack, just be sure to never commit more than what you're sure you can commit every day</p>
-    
+    <p>Because, if you commit a number that is too high, say, highest commit=8, 8 automatically becomes your deep green, and the next number lower that it, becomes the slightly lighter one</p>
   </div>
 </body>
