--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ Project-insight
     </p>
     <p>If you're reading this, Github is easy to hack, just be sure to never commit more than what you're sure you can commit every day</p>
     <p>Because, if you commit a number that is too high, say, highest commit=8, 8 automatically becomes your deep green, and the next number lower that it, becomes the slightly lighter one</p>
-    <So it's advicable to never commit more than 3 times in a day, when you're just starting github, and carry on like that forerver</p>
+    <p>So it's advicable to never commit more than 3 times in a day, when you're just starting github, and carry on like that forerver</p>
+    <p>Because, once you mess it up that's it, no going back</p>
   </div>
 </body>
